fix: 숫자데이터 쉼표 및 단위 포맷 개선

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -6279,3 +6279,9 @@ height: auto !important;
   border: none !important;
   box-shadow: none !important;
 }
+
+.highlighted {
+  color: #FF9D32;
+  font-weight: bold;
+  background-color: #fff5eb;
+}
